<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.leonardo.infiltrado.Contador">

    <Button
        android:text="@string/pausar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:id="@+id/pausar"
        android:layout_below="@+id/mensagem"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/reiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reiniciar"
        android:layout_below="@+id/pausar"
        android:layout_toRightOf="@+id/pausar"
        android:layout_toEndOf="@+id/pausar" />

    <Button
        android:text="@string/acertou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fim"
        android:layout_below="@+id/reiniciar"
        android:layout_toRightOf="@+id/reiniciar"
        android:layout_toEndOf="@+id/reiniciar" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/mensagem"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textAllCaps="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="120sp"
        android:layout_height="120sp"
        android:maxLines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mensagem2"
        android:textSize="18sp"
        android:text="@string/qual_a_palavra_secreta_nperguntas_de_sim_ou_n_o_ao_narrador"
        android:textAlignment="center"
        android:layout_below="@+id/fim"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
