<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela_inicial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.leonardo.infiltrado.TelaInicial">


    <Button
        android:text="@string/nova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/renova_sugestao"
        android:textSize="12sp"
        android:layout_alignTop="@+id/edit1"
        android:layout_toRightOf="@+id/edit1"
        style="@style/Widget.AppCompat.Button.Small" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text|textPersonName"
        android:ems="10"
        android:id="@+id/edit1"
        android:hint="@string/sugest_o"
        android:selectAllOnFocus="true"
        android:layout_below="@+id/text1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:maxLength="40"
        android:textColorLink="@android:color/holo_green_dark" />

    <NumberPicker
        android:id="@+id/np2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/np1"
        android:layout_alignBottom="@+id/np1"
        android:layout_alignLeft="@+id/text3"
        android:scaleX="1.7"
        android:scaleY="1.7"
        android:layout_alignStart="@+id/text3" />

    <Switch
        android:text="Mode:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch2"
        android:showText="true"
        android:textOff=" Infiltrator "
        android:textOn="Spyfall"
        android:layout_alignParentTop="true"
        android:checked="false"
        android:splitTrack="true"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textColorLink="?attr/colorBackgroundFloating"
        android:thumb="@android:drawable/screen_background_dark_transparent" />

    <Button
        android:text="@string/jog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/joga"
        android:textStyle="normal|bold|italic"
        android:lineSpacingExtra="10sp"
        android:textSize="90sp"
        android:fontFamily="sans-serif"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@android:color/holo_green_dark"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/np1"
        android:layout_alignStart="@+id/np1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entre_com_a_palavra_secreta"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:id="@+id/text1"
        android:layout_below="@+id/switch2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <Button
        android:text="En"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/english"
        style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
        android:layout_above="@+id/joga"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="Pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/portugues"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_above="@+id/english"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="           "
        android:layout_above="@+id/text2"
        android:layout_alignRight="@+id/text2"
        android:layout_alignEnd="@+id/text2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogadores"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:id="@+id/text2"
        android:layout_alignBaseline="@+id/text3"
        android:layout_alignBottom="@+id/text3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempo"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:id="@+id/text3"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/renova_sugestao"
        android:layout_alignRight="@+id/switch2"
        android:layout_alignEnd="@+id/switch2" />

    <NumberPicker
        android:id="@+id/np1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.7"
        android:scaleY="1.7"
        android:saveEnabled="false"
        android:layout_below="@+id/text2"
        android:layout_alignRight="@+id/text2"
        android:layout_alignEnd="@+id/text2"
        android:layout_marginTop="56dp" />

</RelativeLayout>
